@@ -19,3 +19,26 @@ $(".category_select").live("change",function(e){
 
     $.ajax({"url":url,"data":data,"success":callback,"type":"POST"});
 });
+
+
+$(".charger_select").live("change",function(e){
+    e.preventDefault();
+
+    var target = e.target;
+    var pid = target.getAttribute('cid');
+    var charger = $(target).val();
+
+    var url = "/items/product/"+pid+"/?format=json";
+    var callback = function (res) {
+     if (res.code == 0 && res.response_content.storage_charger != '') {
+          $(target).after("<img src='/static/admin/img/icon-yes.gif '>");
+	      }
+	    };
+    
+    var csrf_token = document.getElementsByName("csrfmiddlewaretoken")[0].value;
+    var data = {"csrfmiddlewaretoken":csrf_token,
+                        "format":"json",
+                        "storage_charger":charger};
+
+    $.ajax({"url":url,"data":data,"success":callback,"type":"POST"});
+});
