@@ -1,3 +1,7 @@
+########### 2015-3-16  #################
+alter table shop_items_product add column sale_charger varchar(32) NOT NULL, add index (sale_charger);
+alter table shop_items_product add column storage_charger varchar(32) NOT NULL, add index (storage_charger);
+########### 2015-3-9  #################
 alter table shop_weixin_account add js_ticket varchar(256) NOT NULL;
 alter table shop_weixin_account add js_expired datetime NOT NULL;
 ########### 2015-3-5  #################
